syntax = "proto3";

package v2ray.core.transport.internet.request.httpupgrade;
option csharp_namespace = "V2Ray.Core.Transport.Internet.HttpUpgrade";
option go_package = "github.com/v2fly/v2ray-core/v5/transport/internet/httpupgrade";
option java_package = "com.v2ray.core.transport.internet.httpupgrade";
option java_multiple_files = true;

import "common/protoext/extensions.proto";

message Header {
  string key = 1;
  string value = 2;
}

message Config {
  option (v2ray.core.common.protoext.message_opt).type = "transport";
  option (v2ray.core.common.protoext.message_opt).short_name = "httpupgrade";
  option (v2ray.core.common.protoext.message_opt).allow_restricted_mode_load = true;

  string path = 1;
  string host = 2;
  int32 max_early_data = 3;
  string early_data_header_name = 4;
  repeated Header header = 5;
}